MPD_sima v0.14.0

 * Add option to generate config on stdout
 * Add priority feature for plugins
 * More robust MPD client
 * Fixed top track mode
 * Fixed default conf file name (back to mpd_sima.cfg)
 * Fixed http cache for lastFM
 * Cleanup code (removed users similarities)

-- kaliko jack <kaliko@azylum.org> UNRELEASED


MPD_sima v0.13.0

 * Use of MusicBrainzIdentifier by default
   Please consider tagging your library with these metadata
 * New virtualenv installer in pure python

-- kaliko jack <kaliko@azylum.org>  Wed, 28 Jan 2015 12:20:49 +0100


MPD_sima v0.12.3

 * Use albumartist to fetch similar artists
 * Fixed some bugs managing tags

-- kaliko jack <kaliko@azylum.org>  Sat, 06 Dec 2014 16:42:15 +0100


MPD_sima v0.12.2

 * Add some randomness to track selection
 * Do not queue artists already queued (regression)
 * Some refactoring in http client

-- kaliko jack <kaliko@azylum.org>  Tue, 01 Jul 2014 21:47:56 +0200


MPD_sima v0.12.1

 * Fixed SIGHUP error, need python-musicpd >= 0.4.1
 * Add core plugin to detect multiple MPD_sima instance on the same MPD host
 * Fixed startup robustness
 * Removed timestamp in console logging

-- kaliko jack <kaliko@azylum.org>  Sat, 21 Jun 2014 14:02:17 +0200


MPD_sima v0.12.0

 * Major refactoring
 * Add a setup.py, got rid of the Makefile.
 * Switched to Python3 (>=3.2)
 * Depends on requests (http client)
 * Depends on python-musicpd (py3k port of python-mpd)
   configuration file change
   internal database remains the same
 * Temporarily removed userdb feature
 * Base artist for similarity is the last track queued
 * Persistent http caching

-- kaliko jack <kaliko@azylum.org> Mon, 16 Jun 2014 10:37:14 +0200


MPD_sima v0.11.0

 * straight forward py3k conversion from v0.10.0

-- kaliko jack <kaliko@azylum.org> UNRELEASED


MPD_sima v0.10.0

 * Improved album detection (especially multi-artists album)
 * Controls conf file is readable at startup
 * Complete rewrite of MPD client
