@@ -2,12 +2,12 @@
 .\"     Title: mpd-sima
 .\"    Author: Jack Kaliko <kaliko@azylum.org>
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 02/12/2015
+.\"      Date: 09/20/2015
 .\"    Manual: mpd-sima 0.14.0 User Manual
 .\"    Source: mpd-sima
 .\"  Language: English
 .\"
-.TH "MPD\-SIMA" "1" "02/12/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
+.TH "MPD\-SIMA" "1" "09/20/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -31,9 +31,9 @@
 mpd-sima \- mpd\-sima will try to maintain some titles ahead in the queue following different policies\&.
 .SH "SYNOPSIS"
 .HP \w'\fBmpd\-sima\fR\ 'u
-\fBmpd\-sima\fR [\fB\-\-daemon\fR] [\fB\-\-config=\fR\fIconf_file\fR] [\fB\-\-var_dir=\fR\fIvar_directory\fR] [\fB\-\-pid=\fR\fIpid_file\fR] [\fB\-\-log=\fR\fIlog_file\fR] [\fB\-\-log\-level=\fR\fIlog_level\fR] [\fB\-\-host=\fR\fImpd_host\fR] [\fB\-\-mpd_port=\fR\fImpd_port\fR]
+\fBmpd\-sima\fR [\fB\-\-daemon\fR] [\fB\-\-config=\fR\fIconf_file\fR] [\fB\-\-var\-dir=\fR\fIvar_directory\fR] [\fB\-\-pid=\fR\fIpid_file\fR] [\fB\-\-log=\fR\fIlog_file\fR] [\fB\-\-log\-level=\fR\fIlog_level\fR] [\fB\-\-host=\fR\fImpd_host\fR] [\fB\-\-mpd_port=\fR\fImpd_port\fR]
 .HP \w'\fBmpd\-sima\fR\ 'u
-\fBmpd\-sima\fR \-\-create\-db [\fB\-\-var_dir=\fR\fIvar_directory\fR]
+\fBmpd\-sima\fR \-\-create\-db [\fB\-\-var\-dir=\fR\fIvar_directory\fR]
 .HP \w'\fBmpd\-sima\fR\ 'u
 \fBmpd\-sima\fR \-\-generate\-config [\fB\&...\fR]
 .HP \w'\fBmpd\-sima\fR\ 'u
@@ -55,7 +55,7 @@ the section called \(lqENVIRONMENT\(rq\&.
 .PP
 Here follows an example on how to launch mpd\-sima as a service on your system, not attach to regular user configuration/database\&.
 .PP
-\fBmpd\-sima \-\-daemon \-\-conf=/etc/mpd_sima\&.cfg \-\-var_dir=/var/cache/mpd\-sima/ \-\-pid=/run/mpd\-sima\&.pid \-\-log=/var/log/mpd\-sima\&.log\fR
+\fBmpd\-sima \-\-daemon \-\-conf=/etc/mpd_sima\&.cfg \-\-var\-dir=/var/cache/mpd\-sima/ \-\-pid=/run/mpd\-sima\&.pid \-\-log=/var/log/mpd\-sima\&.log\fR
 .SS "Launch in user land"
 .PP
 Launching mpd\-sima from/whithin your user account is easy, you can simply call
@@ -138,7 +138,7 @@ the section called \(lqFILES\(rq\&.
 
 .RE
 .PP
-\fB\-\-var_dir=\fR\fB\fIvar_directory\fR\fR
+\fB\-\-var\-dir=\fR\fB\fIvar_directory\fR\fR
 .RS 4
 Use the specific path
 \fIvar_directory\fR
@@ -159,7 +159,7 @@ Generate a sample configuration file according to the current configuration\&. Y
 \fB\-\-create\-db\fR
 .RS 4
 Create the database and exit\&. Uses folder specified with
-\fB\-\-var_dir\fR
+\fB\-\-var\-dir\fR
 or default directory\&.
 .br
 Default is to use
@@ -230,7 +230,9 @@ to
 ${HOME}/\&.config\&.
 .br
 You may override them using command line option
-\fB\-\-var_dir\fR
+\fB\-\-var\-dir\fR
+and
+\fB\-\-config\fR
 (cf\&.
 \fBmpd-sima\fR(1))
 .SH "ENVIRONMENT"
