@@ -2,12 +2,12 @@
 .\"     Title: mpd_sima.cfg
 .\"    Author: Jack Kaliko <kaliko@azylum.org>
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 02/15/2015
+.\"      Date: 09/20/2015
 .\"    Manual: mpd-sima 0.14.0 User Manual
 .\"    Source: mpd-sima
 .\"  Language: English
 .\"
-.TH "MPD_SIMA\&.CFG" "5" "02/15/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
+.TH "MPD_SIMA\&.CFG" "5" "09/20/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -455,7 +455,9 @@ to
 ${HOME}/\&.config\&.
 .br
 You may override them using command line option
-\fB\-\-var_dir\fR
+\fB\-\-var\-dir\fR
+and
+\fB\-\-config\fR
 (cf\&.
 \fBmpd-sima\fR(1))
 .SH "FEEDBACK/BUGS"
