@@ -1,5 +1,7 @@
 THANKS
 
+ * Codingteam, the original forge hosting the project.
+
  * Mathieu (a.k.a. MuLiMa), for the projet mpd_dynamic_playlister, initial
    inspiration of MPD_sima.
    http://forum.ubuntu-fr.org/viewtopic.php?id=146141
