@@ -7,6 +7,7 @@ MPD_sima v0.14.0
  * Fixed default conf file name (back to mpd_sima.cfg)
  * Fixed http cache for lastFM
  * Cleanup code (removed users similarities)
+ * Make "var-dir" option default name instead of "var_dir"
 
 -- kaliko jack <kaliko@azylum.org> UNRELEASED
 
